--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/css/steelfishFont.css">
 
 <!--Favicon-->
-<link href="{{ site.url }}/assets/favicon.ico" rel="icon" type="image/x-icon" />
+<link href="{{ site.url }}/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 <!-- Bootstrap -->
 <link href="{{ site.url }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
