--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,8 @@
         </li>
     </ul>
 
-    <p>2014 \(@_@)/ TGR.</p>
+    <p>
+        &copy; {{ site.time | date: '%Y' }}. \(@_@)/ TGR.
+    </p>
 
 </div>
