--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="{{ site.url }}/changelog.html">Release notes</a></li>
-            <li><a href="http://thegamersreader.uservoice.com">Support website</a></li>
+            <li><a href="http://thegamersreader.uservoice.com">Go to support website</a></li>
             <li class="divider"></li>
             <li><a href="{{ site.url }}/contact.html">Contact us</a></li>
           </ul>
