--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'thegamersreader'; // required: replace example with your forum shortname
-        var disqus_identifier = '{{ page.disqus_identifier }}';
+//        var disqus_identifier = '{{ page.disqus_identifier }}';
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
