--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,6 +5,7 @@
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'thegamersreader'; // required: replace example with your forum shortname
         var disqus_identifier = '{% if page.disqus_identifier %}{{ page.disqus_identifier}}{% else %}{{ site.url }}{{ page.url }}{% endif %}';
+        var disqus_url = '{{ site.url }}{{ page.url }}';
         
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
