--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,5 @@
+<!--Disqus-->
+{% include disqus.html %}
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
