--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }} &nbsp;&#8211;&nbsp; {% include comments_count.html %}</p>
+<p class="meta">{{ page.date | date_to_string }} &nbsp;&#8211;&nbsp;
+    {% if site.disqus_short_name and post.comments == true and site.disqus_show_comment_count == true %}
+		    {% include post/comments_link.html %}
+    {% endif %}
+</p>
 
 <div class="post">
     {{ content }}
