--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div class="post">
     {{ content }}
     <p style="padding-top:1rem;">
-        If you have any questions or comments, please post them below. {% include twitter_plug.html %}
+        If you have any questions or comments, please post them below. {% include post/twitter_plug.html %}
     </p>
 </div>
 
