--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-<!--          <li><a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142">Get it on the appstore</a></li>-->
+          <li><a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142">Get it on the appstore</a></li>
         <li><a href="{{ site.url }}/blog.html">Blog</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
