--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,9 +53,7 @@ a.navbar-brand {
      position: relative;
 
      padding-bottom: 56.25%;
-
-     padding-top: 35px;
-
+     
      height: 0;
 
      overflow: hidden;
@@ -64,6 +62,23 @@ a.navbar-brand {
 
      height: auto;
  }
+
+.ipad-container {
+/*    padding-bottom: 66.25%;*/
+    max-height: 607px;
+    min-height: 607px;
+    min-width: 882px;
+}
+
+.iphone-container {
+    max-height: 607px;
+    min-height: 607px;
+    min-width: 291px;
+}
+
+.youtube-container {
+    padding-top: 35px;
+}
 
  .embed-container iframe,
  .embed-container object,
