--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -21,6 +21,9 @@
     });
 </script>
 
+<!--Bootstrap Image Gallery-->
+<script src="{{ site.url }}/assets/js/blueimp-gallery.min.js"></script>
+
 <!-- User Voice -->
 <script>
 // Include the UserVoice JavaScript SDK (only needed once on a page)
