--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,4 +43,5 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-
+<!--Bootstrap Image Gallery-->
+<link rel="stylesheet" href="{{ site.url }}/assets/css/blueimp-gallery.min.css">
