--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {% include head.html %}
-    </head>
-    <body>
-        <header>
-            {% include header.html %}
-        </header>
-        
-        <div class="container">
-            {{ content }}
+
+<head>
+    {% include head.html %}
+</head>
+
+<body>
+    <header>
+        {% include header.html %}
+    </header>
+
+    <div class="container">
+        {{ content }}
+
+        <!-- The Bootstrap Image Gallery lightbox -->
+        <div id="blueimp-gallery" class="blueimp-gallery">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="close">×</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
         </div>
         
-        <footer>
-            {% include footer.html %}
-        </footer>
-        
-        {% include scripts.html %}   
-        
-    </body>
+        <script>
+        document.getElementById('links').onclick = function (event) {
+            event = event || window.event;
+            var target = event.target || event.srcElement,
+                link = target.src ? target.parentNode : target,
+                options = {index: link, event: event},
+                links = this.getElementsByTagName('a');
+            blueimp.Gallery(links, options);
+        };
+        </script>
+
+    </div>
+
+    <footer>
+        {% include footer.html %}
+    </footer>
+
+    {% include scripts.html %}
+
+</body>
+
 </html>
